src/packages/frontend/_projects.sass
/*
 *  This file is part of CoCalc: Copyright © 2020 Sagemath, Inc.
 *  License: MS-RSL – see LICENSE.md for details
 */

@use 'colors'

// #smc-file-tabs-* used in project_page.cjsx

// ProjectPage
=file-tabs-base
  height: 32px
  font-size: 10.5pt
  border-radius: 5px 5px 0px 0px

.smc-file-tabs-fixed-desktop > li > a
  padding: 10px 5px
  +file-tabs-base

// make nav tabs a little tighter horizontally.
.smc-file-tabs-sortable-desktop > li > a
  padding: 10px 5px

// ProjectPage

.list-group-header
  list-style: none
  color: colors.$COL_GRAY
  padding-left: 5px
  margin-top: 5px
  border-top: 1px solid colors.$COL_GRAY_LL
  padding-top: 10px
  &:first-child
    margin-top: 5px
    padding-top: 0px
    border-top: none

.smc-file-tab-floating
  background-color: colors.$COL_BS_BLUE_BGRND
  border-radius: 5px 5px 0px 0px
  box-sizing: border-box
  color: rgb(51, 51, 51)
  display: block
  flex-shrink: 1
  line-height: normal
  list-style-image: none
  list-style-position: outside
  list-style-type: none
  overflow-x: hidden
  overflow-y: hidden
  position: relative
  text-align: left
  width: 250px
  +file-tabs-base

  > a
    color: rgb(51, 51, 51)
    border-radius: 5px 5px 0px 0px
    box-sizing: border-box
    display: block
    line-height: normal
    list-style-image: none
    list-style-position: outside
    list-style-type: none
    padding: 11px 5px
    position: relative
    +file-tabs-base

.highlight
  background-color: yellow

.cc-project-files-create-dropdown
  > .dropdown.btn-group
    display: flex
    flex: 1 0 auto

.cc-project-files-path-nav
  flex: 1 0 auto
  > div,
  > nav
    background-color: var(--cocalc-bg-hover, colors.$COL_GRAY_LLL)
    border-radius: 3px

// The !important below are because we are directly overriding
// what is defined for breadcrumbs in antd, in particular, in the
// antd-breadcrumb class. We do this, so things look right in
// the particular place we are using this.
.cc-path-navigator
  flex: 5 1 auto
  max-width: 50vw
  padding: 5px 10px !important

.cc-path-navigator,
.cc-project-flyout-path-navigator
  color: var(--cocalc-primary, colors.$COL_BS_BLUE_TEXT)
  span
    cursor: pointer

.cc-project-flyout-path-navigator
  overflow: hidden
  text-overflow: ellipsis
  float: left
  white-space: nowrap
  > ol
    display: inline-block
    white-space: nowrap
    > li
      display: inline-block
      white-space: nowrap
  li.ant-breadcrumb-separator
    margin-right: 2px
    margin-left: 2px

.cc-path-navigator-history
  color: var(--cocalc-text-secondary, colors.$COL_GRAY)
.cc-path-navigator-active
  font-weight: bold
  color: var(--cocalc-text-primary, colors.$COL_GRAY_D)

.cc-custom-image-desc
  h1
    font-size: 125%
  h2
    font-size: 120%
  h3
    font-size: 115%
  h4
    font-size: 110%
  h6
    font-size: 105%

li.cc-project-home-recent-files
  cursor: pointer
  &:hover
    background-color: colors.$COL_GRAY_LLL

div.cc-project-flyout-dragbar
  background-color: var(--cocalc-drag-bar, transparent)
div.cc-project-flyout-dragbar:hover
  background-color: var(--cocalc-drag-bar-hover, colors.$COL_GRAY_L)

.cc-project-log-history-entry:hover
  cursor: pointer
  background-color: colors.$COL_GRAY_LLL

.cc-project-flyout-files-panel,
.cc-project-flyout-settings-panel
  .ant-collapse-header
    background-color: var(--cocalc-top-bar-bg, colors.$COL_GRAY_LL)
    color: var(--cocalc-text-primary, colors.$COL_GRAY_D)
  .ant-collapse-content
    background-color: var(--cocalc-bg-elevated, colors.$COL_GRAY_LLLL)
    border-top-color: var(--cocalc-border-light, colors.$COL_GRAY_L0) !important
  .ant-collapse-content-box
    padding: 0 !important

.cc-license-table-public-info
  td, th
    padding: 5px !important
  .ant-table-expanded-row
    td
      padding: 0 !important

